--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,17 @@
     },
     {
       "source": "/((?!api/|assets/|_next/|favicon.ico|sw.js).*)",
+      "has": [
+        {
+          "type": "header",
+          "key": "User-Agent",
+          "value": ".*(YandexBot|Googlebot|Bingbot|Slurp|DuckDuckBot|facebookexternalhit|twitterbot|pinterest).*"
+        }
+      ],
+      "destination": "https://service.prerender.io/https://osutyumencup.ru/$1"
+    },
+    {
+      "source": "/((?!api/|assets/|_next/|favicon.ico|sw.js).*)",
       "destination": "/index.html"
     }
   ],
